--- a/_layouts/multi.html
+++ b/_layouts/multi.html
@@ -433,5 +433,6 @@
                 [].slice.call( document.querySelectorAll('.items-wrap a') ).forEach( function(el) { el.onclick = function() { return false; } } );
             })();
         </script>
+        {% include analytics.html %}
     </body>
 </html>
