--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,6 @@
             {% include related.html %}
         </div><!-- /container -->
         {% include inline-scripts.html %}
+        {% include analytics.html %}
     </body>
 </html>
