--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="yZvCYZrEdmo9n-oC7k50zPknTDa-fhcee-2ew-Rv3lM" />
         <title>{{ site.title }}</title>
         <meta name="description" content="{{ site.description }}" />
         <meta name="keywords" content="fullscreen image, grid layout, flexbox grid, transition" />
